# parx

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/documentation/: Convolution.md  Pooling.md
src/parx/: __init__.py  conv.py  pool.py
src/parx/_torch/: __init__.py  partialconv.py
tests/: test_conv2d.py  test_conv2ddws.py
