[project]
name = "parx"
version = "0.1.0"
description = "Neural network convolution layers"
readme = "README.md"
authors = [
    { name = "Matt Black", email = "matt.black7@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.12.2",
    "jax>=0.6.1",
    "jaxtyping>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.10",
    "mypy>=1.15.0",
    "pooch>=1.8.2",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.5",
    "pyupgrade>=3.19.1",
    "torch>=2.7.0",
    "typeguard>=4.4.2",
]
